# chessBot

./: APiece.cpp  APiece.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  SMove.hpp
Pieces/: APiece.cpp  APiece.hpp  Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
unittests/: BishopTests.cpp  SMoveTests.cpp  main.cpp  unit_example.cpp
unittests/PiecesTests/: BishopTests.cpp
